# adventure2016

./: .bashrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  signOn.cpp  spec.txt
23-yamlparse-update/single-threaded-networking/include/: Client.h  Commands.h  Model.h  Npc.h  ResetInterface.h  Server.h
23-yamlparse-update/single-threaded-networking/lib/: CMakeLists.txt
23-yamlparse-update/single-threaded-networking/lib/authentication/: CMakeLists.txt
23-yamlparse-update/single-threaded-networking/tools/: CMakeLists.txt
b/: CMakeCache.txt  Makefile  cmake_install.cmake  hello
b/lib/: Makefile  cmake_install.cmake
b/lib/baseClasses/: Makefile  cmake_install.cmake
b/lib/helperClasses/: Makefile  cmake_install.cmake
b/lib/yamlParse/: Makefile  cmake_install.cmake
b/tools/: Makefile  cmake_install.cmake
b/tools/runMain/: Makefile  cmake_install.cmake
data/: Midgaard.yml  shire.yml  spells.yml  test.yml  users.yml  users1.yml
include/: Helper.h  NPC.h  Npc.h  Object.h  Player.h  door.h  player.h  room.h  yamlParse.h  yamlParser.h
lib/: CMakeLists.txt  Makefile  cmake_install.cmake  room.cpp
lib/baseClasses/: CMakeLists.txt  Door.cpp  Makefile  NPC.cpp  Npc.cpp  Object.cpp  Player.cpp  Room.cpp  cmake_install.cmake  door.cpp  room.cpp
lib/helperClasses/: CMakeLists.txt  Helper.cpp
lib/yamlParse/: CMakeLists.txt  npcParser.cpp  yamlParse.cpp  yamlParser.cpp
single-threaded-networking/: CMakeLists.txt
single-threaded-networking/b/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
single-threaded-networking/b/lib/: Makefile  cmake_install.cmake
single-threaded-networking/b/tools/: Makefile  cmake_install.cmake
single-threaded-networking/include/: Authentication.h  Character.h  CharacterImp.h  CharacterType.h  Client.h  CombatCommandInterface.h  CombatCommands.h  CombatManager.h  Combatant.h  CommandInterface.h  CommandParse.h  Commands.h  Context.h  CustomError.h  Door.h  Fight.h  Model.h  ModelInterface.h  NPC.h  Npc.h  NpcImp.h  Object.h  Person.h  PigLatinTranslator.h  Player.h  ResetInterface.h  Resets.h  Room.h  Server.h  ServerHelper.h  ServerInterface.h  SpellInterface.h  Spells.h  YamlParseAndBuild.h  YamlParseBuild.h  YamlParser.h  YamlSaveData.h  yamlParser.h
single-threaded-networking/include/yaml-cpp/: CombatCommandInterface.h
single-threaded-networking/lib/: CMakeLists.txt
single-threaded-networking/lib/Commands/: CMakeLists.txt  CombatCommands.cpp  CommandInterface.h  Commands.cpp
single-threaded-networking/lib/PigLatin/: CMakeLists.txt  PigLatinTranslator.cpp
single-threaded-networking/lib/Resets/: CMakeLists.txt  Resets.cpp
single-threaded-networking/lib/Spells/: CMakeLists.txt  Spells.cpp
single-threaded-networking/lib/authentication/: Authentication.cpp
single-threaded-networking/lib/baseClasses/: CMakeLists.txt  Character.cpp  CharacterImp.cpp  CharacterType.cpp  Commands.cpp  Context.cpp  Door.cpp  NPC.cpp  Npc.cpp  NpcImp.cpp  Object.cpp  Person.cpp  Player.cpp  Reset.cpp  Room.cpp  Spells.cpp
single-threaded-networking/lib/model/: CMakeLists.txt  CombatManager.cpp  Combatant.cpp  CommandParse.cpp  Fight.cpp  Model.cpp  ModelInterface.cpp  ServerHelper.cpp  ServerInterface.cpp
single-threaded-networking/lib/networking/: CMakeLists.txt  Server.cpp  TransferMessage.h
single-threaded-networking/lib/yamlParser/: CMakeLists.txt  CMakeLists.txt~  YamlParseAndBuild.cpp  YamlParseBuild.cpp  YamlParser.cpp  yamlParser.cpp
single-threaded-networking/lib/yamlSaver/: CMakeLists.txt  YamlSaveData.cpp
single-threaded-networking/tools/chatclient/: CMakeLists.txt  ChatWindow.cpp  ChatWindow.h  chatclient.cpp
single-threaded-networking/tools/chatserver/: CMakeLists.txt  chatserver.cpp
single-threaded-networking/tools/runMain/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  example.txt  hello.cpp  shire.yml  test.cpp
test/include/: Test.h
testCodes/: NPC.cpp  NPC.h
tools/: CMakeLists.txt
tools/runMain/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
yaml-test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test2.cpp
yaml-test/b/: CMakeCache.txt  Makefile  cmake_install.cmake
yaml-test/b/lib/: Makefile  cmake_install.cmake
yaml-test/b/tools/: Makefile  cmake_install.cmake
yaml-test/lib/: Makefile  cmake_install.cmake
yaml-test/testCodes/: test.cpp
yaml-test/tools/: Makefile  cmake_install.cmake
yaml-test/tools/runMain/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
yamlparse/: CMakeLists.txt  CMakeLists.txt~  spec.txt
yamlparse/data/: shire.yml
yamlparse/include/: Door.h  Model.h  NPC.h  Object.h  Reset.h  YamlParser.h  door.h  model.h  room.h  yamlParser.h
yamlparse/lib/: CMakeLists.txt  CMakeLists.txt~
yamlparse/lib/NPC/: CMakeLists.txt  NPC.cpp
(+37 files in other folders)
